--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,19 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+# Raw and processed datasets
+data/
+datasets/
+
+# Model artifacts
+models/
+checkpoints/
+
+# Temporary analysis files
+*.temp
+*.tmp
+
+# Jupyter Notebook local metadata
+*.ipynb-meta
